# manager

./: .gitignore  README.md  pyproject.toml  themes.json
scripts/: components.py  constants.py  debug.py  demographics.py  edicts.py  main.py  processors.py  state.py  ui.py  utility.py  world.py
scripts/stores/: state_data.py  ui_data.py  world_data.py
scripts/ui_elements/: antechamber.py  council.py  main_menu.py  overview.py  screen.py  selection.py  study.py
